--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,17 +8,44 @@
     [opened]="!(isHandset$ | async)"
   >
     <mat-toolbar>
-      <mat-icon class="logo" svgIcon="mrobot-full"></mat-icon>
+      <mat-icon
+        class="logo"
+        [attr.aria-label]="'aria.multiplayerRobot' | translate"
+        svgIcon="mrobot-full"
+      ></mat-icon>
     </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Dashboard</a>
       <a mat-list-item href="#">
-        <mat-icon svgIcon="games"></mat-icon>
-        Games
+        <mat-icon [attr.aria-label]="'aria.dashboardIcon' | translate">
+          dashboard
+        </mat-icon>
+        {{ "dashboard" | translate }}
       </a>
-      <a mat-list-item href="#">Community</a>
-      <a mat-list-item href="#">Desktop App</a>
-      <a mat-list-item href="#">Support Us</a>
+      <a mat-list-item href="#">
+        <mat-icon
+          [attr.aria-label]="'aria.gamesIcon' | translate"
+          svgIcon="games"
+        ></mat-icon>
+        {{ "games" | translate }}
+      </a>
+      <a mat-list-item href="#">
+        <mat-icon [attr.aria-label]="'aria.communityIcon' | translate">
+          group
+        </mat-icon>
+        {{ "community" | translate }}
+      </a>
+      <a mat-list-item href="#">
+        <mat-icon [attr.aria-label]="'aria.desktopAppIcon' | translate">
+          desktop_windows
+        </mat-icon>
+        {{ "desktopApp" | translate }}
+      </a>
+      <a mat-list-item href="#">
+        <mat-icon [attr.aria-label]="'aria.premiumIcon' | translate">
+          card_membership
+        </mat-icon>
+        {{ "premium" | translate }}
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -26,14 +53,16 @@
       <button
         class="drawer-button"
         type="button"
-        aria-label="Toggle sidenav"
+        [attr.aria-label]="'aria.sideNavButton' | translate"
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="(isHandset$ | async)"
       >
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        <mat-icon [attr.aria-label]="'aria.sideNavIcon' | translate">
+          menu
+        </mat-icon>
       </button>
-      <span class="page-title">Dashboard</span>
+      <span class="page-title">{{ "dashboard" | translate }}</span>
     </mat-toolbar>
     <!-- Add Content Here -->
   </mat-sidenav-content>
