--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@impot "./mrobot-colors"
+@import "./mrobot-colors"
 
 body
   margin: 0
+  background-color: map-get($mat-grey, 900)
