Renamed premium to envoy

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -41,10 +41,10 @@
         {{ "desktopApp" | translate }}
       </a>
       <a mat-list-item href="#">
-        <mat-icon [attr.aria-label]="'aria.premiumIcon' | translate">
+        <mat-icon [attr.aria-label]="'aria.envoyIcon' | translate">
           card_membership
         </mat-icon>
-        {{ "premium" | translate }}
+        {{ "envoy" | translate }}
       </a>
     </mat-nav-list>
   </mat-sidenav>
