Got nav skeleton working

--- a/src/mrobot-colors.sass
+++ b/src/mrobot-colors.sass
@@ -3,3 +3,5 @@
 $mrobot-primary: mat-palette($mat-light-green)
 $mrobot-accent: mat-palette($mat-cyan)
 $mrobot-warn: mat-palette($mat-cyan)
+
+$mrobot-theme: mat-dark-theme($mrobot-primary, $mrobot-accent, $mrobot-warn)
