--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container fullscreen class="sidenav-container">
   <mat-sidenav
     #drawer
     class="sidenav"
@@ -15,36 +15,36 @@
       ></mat-icon>
     </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">
+      <a mat-list-item [routerLink]="['/dashboard']">
         <mat-icon [attr.aria-label]="'aria.dashboardIcon' | translate">
           dashboard
         </mat-icon>
         {{ "dashboard" | translate }}
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item [routerLink]="['/games']">
         <mat-icon
           [attr.aria-label]="'aria.gamesIcon' | translate"
           svgIcon="games"
         ></mat-icon>
         {{ "games" | translate }}
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item [routerLink]="['/community']">
         <mat-icon [attr.aria-label]="'aria.communityIcon' | translate">
           group
         </mat-icon>
         {{ "community" | translate }}
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item [routerLink]="['/desktop-app']">
         <mat-icon [attr.aria-label]="'aria.desktopAppIcon' | translate">
           desktop_windows
         </mat-icon>
         {{ "desktopApp" | translate }}
       </a>
-      <a mat-list-item href="#">
-        <mat-icon [attr.aria-label]="'aria.envoyIcon' | translate">
+      <a mat-list-item [routerLink]="['/boost']">
+        <mat-icon [attr.aria-label]="'aria.boostIcon' | translate">
           card_membership
         </mat-icon>
-        {{ "envoy" | translate }}
+        {{ "boost" | translate }}
       </a>
     </mat-nav-list>
   </mat-sidenav>
@@ -62,8 +62,11 @@
           menu
         </mat-icon>
       </button>
-      <span class="page-title">{{ "dashboard" | translate }}</span>
+      <router-outlet name="app-bar"></router-outlet>
+      <span class="page-title">
+        {{ activatedRoute$ | async | titleFromRouteData | translate }}
+      </span>
     </mat-toolbar>
-    <!-- Add Content Here -->
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
