--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,4 +3,5 @@
 
 body
   margin: 0
-  background-color: map-get($mat-grey, 900)
+  background-color: map-get(map-get($mrobot-theme, background), background)
+  font-family: Roboto, "Helvetica Neue", sans-serif
