Layout and navigation

--- a/src/app/components/games/games.component.html
+++ b/src/app/components/games/games.component.html
@@ -1,12 +1,7 @@
-<mat-tab-group backgroundColor="primary">
+<mat-tab-group color="accent" backgroundColor="primary">
   <mat-tab [label]="'myGames' | translate">
-    <div>
-      <button mat-fab><mat-icon>add</mat-icon></button>
-    </div>
+    Content
   </mat-tab>
-  <mat-tab [label]="'publicGames' | translate">
-    <div>
-      <button mat-fab><mat-icon>add</mat-icon></button>
-    </div>
-  </mat-tab>
+  <mat-tab [label]="'publicGames' | translate"></mat-tab>
 </mat-tab-group>
+<button mat-fab><mat-icon svgIcon="plus"></mat-icon></button>
