--- a/src/styles.sass
+++ b/src/styles.sass
@@ -4,4 +4,11 @@
 body
   margin: 0
   background-color: map-get(map-get($mrobot-theme, background), background)
-  font-family: Roboto, "Helvetica Neue", sans-serif
+
+.mat-tab-header
+  position: fixed !important
+  width: 100%
+  z-index: 999
+
+.mat-tab-body
+  margin-top: 48px
