--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container fullscreen class="sidenav-container">
+<mat-sidenav-container class="sidenav-container">
   <mat-sidenav
     #drawer
     class="sidenav"
@@ -7,92 +7,70 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="!(isHandset$ | async)"
   >
-    <mat-toolbar>
-      <mat-icon
-        class="logo"
-        [attr.aria-label]="'aria.multiplayerRobot' | translate"
-        svgIcon="mrobot-full"
-      ></mat-icon>
-    </mat-toolbar>
-    <mat-nav-list>
-      <a
-        mat-list-item
-        [class.selected]="activatedRoute$ | async | routeIsSelected: 'games'"
-        [routerLink]="['/games']"
-      >
-        <mat-icon
-          [attr.aria-label]="'aria.gamesIcon' | translate"
-          svgIcon="games"
-        ></mat-icon>
-        {{ "games" | translate }}
-      </a>
-      <a
-        mat-list-item
-        [class.selected]="
-          activatedRoute$ | async | routeIsSelected: 'community'
-        "
-        [routerLink]="['/community']"
-      >
-        <mat-icon [attr.aria-label]="'aria.communityIcon' | translate">
-          group
-        </mat-icon>
-        {{ "community" | translate }}
-      </a>
-      <a
-        mat-list-item
-        [class.selected]="
-          activatedRoute$ | async | routeIsSelected: 'desktop-app'
-        "
-        [routerLink]="['/desktop-app']"
-      >
-        <mat-icon [attr.aria-label]="'aria.desktopAppIcon' | translate">
-          desktop_windows
-        </mat-icon>
-        {{ "desktopApp" | translate }}
-      </a>
-      <a
-        mat-list-item
-        [class.selected]="activatedRoute$ | async | routeIsSelected: 'boost'"
-        [routerLink]="['/boost']"
-      >
-        <mat-icon [attr.aria-label]="'aria.boostIcon' | translate">
-          card_membership
-        </mat-icon>
-        {{ "boost" | translate }}
-      </a>
-      <a
-        mat-list-item
-        [class.selected]="activatedRoute$ | async | routeIsSelected: 'admin'"
-        [routerLink]="['/admin']"
-      >
-        <mat-icon [attr.aria-label]="'aria.adminIcon' | translate">
-          security
-        </mat-icon>
-        {{ "admin" | translate }}
-      </a>
-    </mat-nav-list>
-    <div class="sidenav-spacer"></div>
-    <div class="user-footer"></div>
+    <div fxLayout="column" class="drawer-content">
+      <mat-toolbar>
+        <mat-icon class="logo" svgIcon="mrobot-full"></mat-icon>
+      </mat-toolbar>
+      <mat-nav-list>
+        <div *ngFor="let navItem of navItems">
+          <a
+            mat-list-item
+            [title]="navItem.title | translate"
+            [class.selected]="
+              activatedRoute$ | async | routeIsSelected: navItem.route
+            "
+            [routerLink]="['/' + navItem.route]"
+          >
+            <mat-icon [svgIcon]="navItem.icon"></mat-icon>
+            {{ navItem.title | translate }}
+          </a>
+          <mat-divider *ngIf="navItem.divider"></mat-divider>
+        </div>
+        <div class="social-links">
+          <a
+            [title]="'facebook' | translate"
+            href="https://facebook.com/MultiplayerRobot/"
+            target="_blank"
+          >
+            <mat-icon svgIcon="facebook-box"></mat-icon>
+          </a>
+          <a
+            [title]="'twitter' | translate"
+            href="https://twitter.com/GMRobot"
+            target="_blank"
+          >
+            <mat-icon svgIcon="twitter"></mat-icon>
+          </a>
+          <a
+            [title]="'gitHub' | translate"
+            href="https://github.com/n7software"
+            target="_blank"
+          >
+            <mat-icon svgIcon="github-circle"></mat-icon>
+          </a>
+        </div>
+      </mat-nav-list>
+      <div fxFlex="1 1 auto"></div>
+      <div class="user-footer"></div>
+    </div>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar class="app-bar" color="primary">
       <button
         class="drawer-button"
         type="button"
-        [attr.aria-label]="'aria.sideNavButton' | translate"
+        [attr.aria-label]="'mainMenu' | translate"
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="(isHandset$ | async)"
       >
-        <mat-icon [attr.aria-label]="'aria.sideNavIcon' | translate">
-          menu
-        </mat-icon>
+        <mat-icon svgIcon="menu"></mat-icon>
       </button>
-      <router-outlet name="app-bar"></router-outlet>
-      <span class="page-title">
+      <span fxFlex="1 1 auto">
         {{ activatedRoute$ | async | titleFromRouteData | translate }}
       </span>
     </mat-toolbar>
-    <router-outlet></router-outlet>
+    <div class="mat-toolbar-row"></div>
+    <div><router-outlet></router-outlet></div>
   </mat-sidenav-content>
 </mat-sidenav-container>
