--- a/src/mrobot-colors.sass
+++ b/src/mrobot-colors.sass
@@ -1,7 +1,7 @@
 @import "~@angular/material/theming"
 
 $mrobot-primary: mat-palette($mat-light-green)
-$mrobot-accent: mat-palette($mat-cyan)
-$mrobot-warn: mat-palette($mat-cyan)
+$mrobot-accent: mat-palette($mat-cyan, A200, A400, A700)
+$mrobot-warn: mat-palette($mat-red)
 
 $mrobot-theme: mat-dark-theme($mrobot-primary, $mrobot-accent, $mrobot-warn)
