--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -12,7 +12,7 @@
         </span>
       </div>
       <div>
-        <mat-form-field>
+        <mat-form-field color="accent">
           <mat-select
             [(value)]="settings.theme"
             (selectionChange)="save(settings)"
