--- a/src/app/components/settings/settings.component.sass
+++ b/src/app/components/settings/settings.component.sass
@@ -3,6 +3,9 @@
 
 .setting-row
   padding: 0 20px
+  height: 85px
+  mat-form-field
+    margin-top: 15px
 
-  span
+  .mat-subheading-2
     margin: 0
