Working on settings

--- a/src/app/components/games/games.component.html
+++ b/src/app/components/games/games.component.html
@@ -4,4 +4,4 @@
   </mat-tab>
   <mat-tab [label]="'publicGames' | translate"></mat-tab>
 </mat-tab-group>
-<button mat-fab><mat-icon svgIcon="plus"></mat-icon></button>
+<button mat-fab class="docked-fab"><mat-icon svgIcon="plus"></mat-icon></button>
