--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -28,6 +28,13 @@
         </div>
         <div class="social-links">
           <a
+            [title]="'discord' | translate"
+            href="https://discord.gg/a69AyKk"
+            target="_blank"
+          >
+            <mat-icon svgIcon="discord"></mat-icon>
+          </a>
+          <a
             [title]="'facebook' | translate"
             href="https://facebook.com/MultiplayerRobot/"
             target="_blank"
@@ -50,8 +57,6 @@
           </a>
         </div>
       </mat-nav-list>
-      <div fxFlex="1 1 auto"></div>
-      <div class="user-footer"></div>
     </div>
   </mat-sidenav>
   <mat-sidenav-content>
