--- a/src/styles/component-themes.sass
+++ b/src/styles/component-themes.sass
@@ -1,4 +1,6 @@
 @import "./nav.theme"
+@import "./settings.theme"
 
 @mixin component-themes($theme)
   @include nav-theme($theme)
+  @include settings-theme($theme)
