--- a/src/styles/mrobot-themes.sass
+++ b/src/styles/mrobot-themes.sass
@@ -2,24 +2,41 @@
 @import "./component-themes"
 @include mat-core()
 
-$mrobot-primary-dark: mat-palette($mat-light-green)
-$mrobot-primary-light: mat-palette($mat-light-green, 400)
-$mrobot-accent-dark: mat-palette($mat-cyan, A200, A400, A700)
-$mrobot-accent-light: mat-palette($mat-cyan)
-$mrobot-warn: mat-palette($mat-red)
+$mrobot-warn-light: mat-palette($mat-red)
+$mrobot-warn-dark: mat-palette($mat-red, 400)
 
 @mixin root-theme($theme)
   body
     background-color: map-get(map-get($theme, background), background)
 
 .mrobot-dark
-  $dark-theme: mat-dark-theme($mrobot-primary-dark, $mrobot-accent-dark, $mrobot-warn)
+  $primary: mat-palette($mat-light-green)
+  $accent: mat-palette($mat-cyan, A400, A200, A700)
+  $dark-theme: mat-dark-theme($primary, $accent, $mrobot-warn-dark)
   @include angular-material-theme($dark-theme)
   @include root-theme($dark-theme)
   @include component-themes($dark-theme)
 
 .mrobot-light
-  $light-theme: mat-light-theme($mrobot-primary-light, $mrobot-accent-light, $mrobot-warn)
+  $primary: mat-palette($mat-light-green, 400)
+  $accent: mat-palette($mat-cyan)
+  $light-theme: mat-light-theme($primary, $accent, $mrobot-warn-light)
+  @include angular-material-theme($light-theme)
+  @include root-theme($light-theme)
+  @include component-themes($light-theme)
+
+.mrobot-king-dark
+  $primary: mat-palette($mat-amber)
+  $accent: mat-palette($mat-purple, A200, A100, A700)
+  $dark-theme: mat-dark-theme($primary, $accent, $mrobot-warn-dark)
+  @include angular-material-theme($dark-theme)
+  @include root-theme($dark-theme)
+  @include component-themes($dark-theme)
+
+.mrobot-king-light
+  $primary: mat-palette($mat-amber)
+  $accent: mat-palette($mat-purple)
+  $light-theme: mat-light-theme($primary, $accent, $mrobot-warn-light)
   @include angular-material-theme($light-theme)
   @include root-theme($light-theme)
   @include component-themes($light-theme)
