--- a/src/styles/nav.theme.sass
+++ b/src/styles/nav.theme.sass
@@ -2,5 +2,4 @@
   $primary: map-get($theme, primary)
   .sidenav .mat-nav-list .mat-list-item
     &.selected
-      color: map-get($primary, 500-contrast)
-      background-color: rgba(map-get($primary, 500), 0.5)
+      background-color: rgba(map-get($primary, default), 0.5)
