--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<mrobot-nav></mrobot-nav>
+<mrobot-nav *ngIf="activatedRoute$ | async | showNav"></mrobot-nav>
+<router-outlet *ngIf="!(activatedRoute$ | async | showNav)"></router-outlet>
