--- a/src/app/components/nav/nav.component.sass
+++ b/src/app/components/nav/nav.component.sass
@@ -1,6 +1,6 @@
 .sidenav-container,
 .drawer-content
-  height: 100vh
+  min-height: 100vh
 
 .sidenav
   width: 200px
@@ -29,9 +29,6 @@
     padding: 10px 20px
     .mat-icon
       margin: 5px
-
-  .user-footer
-    flex: 0 0 100px
 
 .app-bar
   position: fixed
