--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,3 +8,15 @@ body
 
 .mat-tab-body
   margin-top: 48px
+
+.docked-fab
+  position: fixed !important
+  right: 15px
+  bottom: 15px
+  z-index: 1000
+
+.docked-fab-secondary
+  position: fixed !important
+  right: 80px
+  bottom: 22px
+  z-index: 10
