--- a/src/styles/mrobot-themes.sass
+++ b/src/styles/mrobot-themes.sass
@@ -9,7 +9,7 @@ $mrobot-warn-dark: mat-palette($mat-red, 400)
   body
     background-color: map-get(map-get($theme, background), background)
 
-.mrobot-dark
+.mrobot-DARK
   $primary: mat-palette($mat-light-green)
   $accent: mat-palette($mat-cyan, A400, A200, A700)
   $dark-theme: mat-dark-theme($primary, $accent, $mrobot-warn-dark)
@@ -17,7 +17,7 @@ $mrobot-warn-dark: mat-palette($mat-red, 400)
   @include root-theme($dark-theme)
   @include component-themes($dark-theme)
 
-.mrobot-light
+.mrobot-LIGHT
   $primary: mat-palette($mat-light-green, 400)
   $accent: mat-palette($mat-cyan)
   $light-theme: mat-light-theme($primary, $accent, $mrobot-warn-light)
@@ -25,7 +25,7 @@ $mrobot-warn-dark: mat-palette($mat-red, 400)
   @include root-theme($light-theme)
   @include component-themes($light-theme)
 
-.mrobot-king-dark
+.mrobot-KINGDARK
   $primary: mat-palette($mat-amber)
   $accent: mat-palette($mat-purple, A200, A100, A700)
   $dark-theme: mat-dark-theme($primary, $accent, $mrobot-warn-dark)
@@ -33,7 +33,7 @@ $mrobot-warn-dark: mat-palette($mat-red, 400)
   @include root-theme($dark-theme)
   @include component-themes($dark-theme)
 
-.mrobot-king-light
+.mrobot-KINGLIGHT
   $primary: mat-palette($mat-amber)
   $accent: mat-palette($mat-purple)
   $light-theme: mat-light-theme($primary, $accent, $mrobot-warn-light)
