--- a/src/app/components/settings/settings.component.sass
+++ b/src/app/components/settings/settings.component.sass
@@ -7,6 +7,9 @@ mat-card
 .mat-title
   margin: 16px 0 0
 
+.discord-note
+  width: 145px
+
 \:host ::ng-deep
   .hours-selector
     flex-wrap: wrap
