Updated country flags to images and switched models to Apollo codegen

--- a/src/app/components/games/games.component.html
+++ b/src/app/components/games/games.component.html
@@ -1,2 +1,8 @@
-
-<button mat-fab class="docked-fab"><mat-icon svgIcon="plus"></mat-icon></button>
+<button
+  mat-fab
+  class="docked-fab"
+  [matTooltip]="'newGame' | translate"
+  (click)="createGame()"
+>
+  <mat-icon svgIcon="plus"></mat-icon>
+</button>
