--- a/src/app/components/settings/settings.component.sass
+++ b/src/app/components/settings/settings.component.sass
@@ -7,8 +7,11 @@ mat-card
 .mat-title
   margin: 16px 0 0
 
+.flag-img
+  margin-right: 5px
+
 .discord-note
-  width: 145px
+  width: 150px
 
 \:host ::ng-deep
   .hours-selector
