--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -36,7 +36,7 @@
               *ngFor="let country of countries"
               [value]="country.code"
             >
-              {{ country.emoji }}
+              <img class="flag-img" [src]="country.smallFlag" />
               {{ "countryCode." + country.code | translate }}
             </mat-option>
           </mat-select>
@@ -89,25 +89,27 @@
         [title]="'connectToDiscord' | translate"
         [description]="'connectToDiscordDescription' | translate"
       >
-        <button
-          mat-flat-button
-          class="discord-connect"
-          (click)="onDiscordClick(settings)"
-          [disabled]="settingsForm.dirty"
-        >
-          <mat-icon svgIcon="discord"></mat-icon>
-          {{
-            (settings.discordConnected ? "disconnect" : "connect")
-              | translate
-              | uppercase
-          }}
-        </button>
-        <div class="mat-small discord-note" *ngIf="settingsForm.dirty">
-          {{
-            (settings.discordConnected
-              ? "saveBeforeDiscordDisconnect"
-              : "saveBeforeDiscordConnect") | translate
-          }}
+        <div>
+          <button
+            mat-flat-button
+            class="discord-connect"
+            (click)="onDiscordClick(settings)"
+            [disabled]="settingsForm.dirty"
+          >
+            <mat-icon svgIcon="discord"></mat-icon>
+            {{
+              (settings.discordConnected ? "disconnect" : "connect")
+                | translate
+                | uppercase
+            }}
+          </button>
+          <div class="mat-small discord-note" *ngIf="settingsForm.dirty">
+            {{
+              (settings.discordConnected
+                ? "saveBeforeDiscordDisconnect"
+                : "saveBeforeDiscordConnect") | translate
+            }}
+          </div>
         </div>
       </mrobot-setting-row>
       <div *ngIf="settings.discordConnected">
@@ -179,14 +181,14 @@
         >
           <mat-button-toggle
             color="accent"
-            value="email"
+            value="EMAIL"
             [disabled]="!emailNotifications"
           >
             <mat-icon svgIcon="email"></mat-icon>
           </mat-button-toggle>
           <mat-button-toggle
             color="accent"
-            value="discord"
+            value="DISCORD"
             [disabled]="!settings.discordConnected"
           >
             <mat-icon svgIcon="discord"></mat-icon>
@@ -202,14 +204,14 @@
         >
           <mat-button-toggle
             color="accent"
-            value="email"
+            value="EMAIL"
             [disabled]="!emailNotifications"
           >
             <mat-icon svgIcon="email"></mat-icon>
           </mat-button-toggle>
           <mat-button-toggle
             color="accent"
-            value="discord"
+            value="DISCORD"
             [disabled]="!settings.discordConnected"
           >
             <mat-icon svgIcon="discord"></mat-icon>
@@ -225,14 +227,14 @@
         >
           <mat-button-toggle
             color="accent"
-            value="email"
+            value="EMAIL"
             [disabled]="!emailNotifications"
           >
             <mat-icon svgIcon="email"></mat-icon>
           </mat-button-toggle>
           <mat-button-toggle
             color="accent"
-            value="discord"
+            value="DISCORD"
             [disabled]="!settings.discordConnected"
           >
             <mat-icon svgIcon="discord"></mat-icon>
@@ -248,14 +250,14 @@
         >
           <mat-button-toggle
             color="accent"
-            value="email"
+            value="EMAIL"
             [disabled]="!emailNotifications"
           >
             <mat-icon svgIcon="email"></mat-icon>
           </mat-button-toggle>
           <mat-button-toggle
             color="accent"
-            value="discord"
+            value="DISCORD"
             [disabled]="!settings.discordConnected"
           >
             <mat-icon svgIcon="discord"></mat-icon>
@@ -271,14 +273,14 @@
         >
           <mat-button-toggle
             color="accent"
-            value="email"
+            value="EMAIL"
             [disabled]="!emailNotifications"
           >
             <mat-icon svgIcon="email"></mat-icon>
           </mat-button-toggle>
           <mat-button-toggle
             color="accent"
-            value="discord"
+            value="DISCORD"
             [disabled]="!settings.discordConnected"
           >
             <mat-icon svgIcon="discord"></mat-icon>
@@ -294,14 +296,14 @@
         >
           <mat-button-toggle
             color="accent"
-            value="email"
+            value="EMAIL"
             [disabled]="!emailNotifications"
           >
             <mat-icon svgIcon="email"></mat-icon>
           </mat-button-toggle>
           <mat-button-toggle
             color="accent"
-            value="discord"
+            value="DISCORD"
             [disabled]="!settings.discordConnected"
           >
             <mat-icon svgIcon="discord"></mat-icon>
@@ -317,14 +319,14 @@
         >
           <mat-button-toggle
             color="accent"
-            value="email"
+            value="EMAIL"
             [disabled]="!emailNotifications"
           >
             <mat-icon svgIcon="email"></mat-icon>
           </mat-button-toggle>
           <mat-button-toggle
             color="accent"
-            value="discord"
+            value="DISCORD"
             [disabled]="!settings.discordConnected"
           >
             <mat-icon svgIcon="discord"></mat-icon>
@@ -340,14 +342,14 @@
         >
           <mat-button-toggle
             color="accent"
-            value="email"
+            value="EMAIL"
             [disabled]="!emailNotifications"
           >
             <mat-icon svgIcon="email"></mat-icon>
           </mat-button-toggle>
           <mat-button-toggle
             color="accent"
-            value="discord"
+            value="DISCORD"
             [disabled]="!settings.discordConnected"
           >
             <mat-icon svgIcon="discord"></mat-icon>
